--- a/home.css
+++ b/home.css
@@ -1,5 +1,6 @@
 @import 'nav.css';
-/*-----------------------------------------------------------header */
+@import 'footer.css';
+/*---------------------------main header style--------------------------------*/
 .hero-section{
     width: 100%;
     height: calc(100vh - 120px);
@@ -25,7 +26,7 @@
     font-weight: 300;
 }
 
-/* ------------------------------------------------------------product*/
+/* ----------------------------product style -----------------------------*/
 .product{
     position: relative;
     overflow: hidden;
@@ -138,6 +139,7 @@
     text-decoration: line-through;
 }
 
+/* -------------Previous and next Button on the Best seller Catalog style ----------*/
 .pre-btn, .nxt-btn{
     border: none;
     width: 10vw;
@@ -168,3 +170,40 @@
 .pre-btn:hover img, .nxt-btn:hover img{
     opacity: 1;
 }
+
+/* -------------------------- Categories---------------------------------*/
+
+.collection-container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+.collection{
+    position: relative;
+}
+
+.collection img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.collection p{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
+    text-transform: capitalize;
+}
+
+.collection:nth-child(3){
+    grid-column: span 2;
+    margin-bottom: 10px;
+}
+
+/*---------------------------------------------*/
