--- a/product.css
+++ b/product.css
@@ -122,3 +122,18 @@
     background: #383838;
     color: #fff;
 }
+
+.detail-des{
+    padding: 0 10vw;
+    text-transform: capitalize;
+}
+
+.heading{
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.des{
+    color: #383838;
+    line-height: 25px;
+}
