added cart, all products page ,modified some pages

--- a/css-files/product.css
+++ b/css-files/product.css
@@ -47,7 +47,8 @@
 
 .details .product-brand{
     text-transform: capitalize;
-    font-size: 28px;
+    font-family: Avenir Next,sans-serif;
+    font-size: 35px;
 }
 
 .details .product-short-des{
