--- a/css-files/nav.css
+++ b/css-files/nav.css
@@ -83,7 +83,7 @@
     border-top: 1px solid #d1d1d1;
 }
 
-.link{
+.link, .dropdown .dropbtn{
     text-transform: capitalize;
     padding: 0 10px;
     margin: 0 5px;
@@ -96,3 +96,40 @@
 .link:hover{
     opacity: 1;
 }
+
+
+/* The dropdown container */
+.dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  /* Add a grey background color to dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
