--- a/css-files/nav.css
+++ b/css-files/nav.css
@@ -133,3 +133,104 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  /* Cart details */
+  .iconCart{
+    position: relative;
+    z-index: 1;
+  }
+
+  .totalQuantity{
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: x-large;
+    background-color: #b31010;
+    width: 25px;
+    height: 25px;
+    color: #fff;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transform: translateX(20px);
+  }
+  /* Cart CSS */
+  .cart{
+    color: #fff;
+    position: fixed;
+    width: 400px;
+    max-width: 80vw;
+    height: 100vh;
+    background-color: #0E0F11;
+    top: 0px;
+    right: -100%;
+    display: grid;
+    grid-template-rows: 50px 1fr 50px;
+    gap: 20px;
+    transition: right 1s;
+  }
+  .cart .buttons .checkout{
+    background-color: #E8BC0E;
+    color: #000;
+  }
+  .cart h2{
+    color: #E8BC0E;
+    padding: 20px;
+    height: 30px;
+    margin: 0;
+  }
+  .cart .listCart .item{
+    display: grid;
+    grid-template-columns: 50px 1fr 70px;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+  .cart .listCart img{
+    width: 100%;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  .cart .listCart .item .name{
+    font-weight: bold;
+  }
+  .cart .listCart .item .quantity{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+  }
+  .cart .listCart .item .quantity span{
+    display: block;
+    width: 50px;
+    text-align: center;
+  }
+  
+  .cart .listCart{
+    padding: 20px;
+    overflow: auto;
+  }
+  .cart .listCart::-webkit-scrollbar{
+    width: 0;
+  }
+  
+  .cart .buttons{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+  }
+  .cart .buttons div{
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  .cart .buttons a{
+    color: #fff;
+    text-decoration: none;
+  }
+  
