--- a/css-files/nav.css
+++ b/css-files/nav.css
@@ -1,32 +1,32 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'roboto', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "roboto", sans-serif;
 }
 
-.navbar{
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #f5f5f5;
-    z-index: 9;
+.navbar {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #f5f5f5;
+  z-index: 9;
 }
 
-.nav{
-    padding: 10px 10vw;
-    display: flex;
-    justify-content: space-between;
+.nav {
+  padding: 10px 10vw;
+  display: flex;
+  justify-content: space-between;
 }
 
-.brand-logo{
-    height: 60px;
+.brand-logo {
+  height: 60px;
 }
 
-.nav-items{
-    display: inline-flex;
-    align-items: center;
+.nav-items {
+  display: inline-flex;
+  align-items: center;
 }
 
 .search {
@@ -35,84 +35,81 @@
   display: inline-block;
 }
 
-
-
-.search-box::placeholder{
-    color: #a9a9a9;
+.search-box::placeholder {
+  color: #a9a9a9;
 }
 
-.nav-items a{
-    margin-left: 10px;
+.nav-items a {
+  margin-left: 10px;
 }
 
-.nav-items a img{
-    width: 30px;
+.nav-items a img {
+  width: 30px;
 }
 /*links content*/
-.links-container{
-    width: 100%;
-    display: flex;
-    padding: 10px 10vw;
-    justify-content: center;
-    list-style: none;
-    border-top: 1px solid #d1d1d1;
+.links-container {
+  width: 100%;
+  display: flex;
+  padding: 10px 10vw;
+  justify-content: center;
+  list-style: none;
+  border-top: 1px solid #d1d1d1;
 }
 
-.link, .dropdown .dropbtn{
-    text-transform: capitalize;
-    padding: 0 10px;
-    margin: 0 5px;
-    text-decoration: none;
-    color: #383838;
-    opacity: 0.5;
-    transition: .5s;
+.link,
+.dropdown .dropbtn {
+  text-transform: capitalize;
+  padding: 0 10px;
+  margin: 0 5px;
+  text-decoration: none;
+  color: #383838;
+  opacity: 0.5;
+  transition: 0.5s;
 }
 
-.link:hover{
-    opacity: 1;
+.link:hover {
+  opacity: 1;
 }
-
 
 /* The dropdown container */
 .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+  float: left;
+  overflow: hidden;
+}
 
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* search box content */
 #myInput {
-  background-image: url('/css/searchicon.png');
+  background-image: url("/css/searchicon.png");
   background-position: 10px 12px;
   background-repeat: no-repeat;
   width: 100%;
@@ -149,11 +146,11 @@
 #myUL li a:hover:not(.header) {
   background-color: #eee;
 }
-.iconCart{
+.iconCart {
   position: relative;
   z-index: 1;
 }
-.totalQuantity{
+.totalQuantity {
   position: absolute;
   top: 0;
   right: 0;
@@ -169,75 +166,80 @@
   border-radius: 50%;
   transform: translateX(20px);
 }
-.cart{
+
+.totalQuantity:hover {
+  cursor: pointer;
+  /* transform: scale(1.1);
+  transition: all 0.2s ease-in-out; */
+}
+.cart {
   color: #fff;
   position: fixed;
   width: 400px;
   max-width: 80vw;
   height: 100vh;
-  background-color: #0E0F11;
+  background-color: #0e0f11;
   top: 0px;
   right: -100%;
   display: grid;
   grid-template-rows: 50px 1fr 50px;
   gap: 20px;
   transition: right 1s;
+  z-index: 9999;
 }
 
-.cart .buttons .checkout{
-  background-color: #E8BC0E;
+.cart .buttons .checkout {
+  background-color: #e8bc0e;
   color: #000;
 }
-.cart h2{
-  color: #E8BC0E;
+.cart h2 {
+  color: #e8bc0e;
   padding: 20px;
   height: 30px;
   margin: 0;
 }
 
-
-.cart .listCart .item{
+.cart .listCart .item {
   display: grid;
   grid-template-columns: 50px 1fr 70px;
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
-  
 }
-.cart .listCart img{
+.cart .listCart img {
   width: 100%;
   height: 70px;
   object-fit: cover;
   border-radius: 10px;
 }
-.cart .listCart .item .name{
+.cart .listCart .item .name {
   font-weight: bold;
 }
-.cart .listCart .item .quantity{
+.cart .listCart .item .quantity {
   display: flex;
   justify-content: end;
   align-items: center;
 }
-.cart .listCart .item .quantity span{
+.cart .listCart .item .quantity span {
   display: block;
   width: 50px;
   text-align: center;
 }
 
-.cart .listCart{
+.cart .listCart {
   padding: 20px;
   overflow: auto;
 }
-.cart .listCart::-webkit-scrollbar{
+.cart .listCart::-webkit-scrollbar {
   width: 0;
 }
 
-.cart .buttons{
+.cart .buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   text-align: center;
 }
-.cart .buttons div{
+.cart .buttons div {
   background-color: #000;
   display: flex;
   justify-content: center;
@@ -245,7 +247,7 @@
   font-weight: bold;
   cursor: pointer;
 }
-.cart .buttons a{
+.cart .buttons a {
   color: #fff;
   text-decoration: none;
 }
