added checkout button function, edit cart colo, fixed css detailsr

--- a/css-files/product.css
+++ b/css-files/product.css
@@ -77,6 +77,8 @@
     margin-top: 50px;
     background: #383838;
     color: #fff;
+    text-decoration: none;
+    text-align: center;
 }
 
 .detail-des{
