--- a/css-files/nav.css
+++ b/css-files/nav.css
@@ -178,7 +178,7 @@
   width: 400px;
   max-width: 80vw;
   height: 100vh;
-  background-color: #0e0f11;
+  background-color: #f5f5f5;
   top: 0px;
   right: -100%;
   display: grid;
@@ -189,11 +189,12 @@
 }
 
 .cart .buttons .checkout {
-  background-color: #e8bc0e;
-  color: #000;
+  background-color: #966e33;
+  border-radius: 40px;
+  color: #fff;
 }
 .cart h2 {
-  color: #e8bc0e;
+  color: #000;
   padding: 20px;
   height: 30px;
   margin: 0;
@@ -206,6 +207,9 @@
   gap: 20px;
   margin-bottom: 20px;
 }
+.info .price{
+  color: #000;
+}
 .cart .listCart img {
   width: 100%;
   height: 70px;
@@ -214,11 +218,13 @@
 }
 .cart .listCart .item .name {
   font-weight: bold;
+  color: #000;
 }
 .cart .listCart .item .quantity {
   display: flex;
   justify-content: end;
   align-items: center;
+  color: #000000;
 }
 .cart .listCart .item .quantity span {
   display: block;
@@ -229,6 +235,7 @@
 .cart .listCart {
   padding: 20px;
   overflow: auto;
+  color: #000;
 }
 .cart .listCart::-webkit-scrollbar {
   width: 0;
@@ -240,7 +247,8 @@
   text-align: center;
 }
 .cart .buttons div {
-  background-color: #000;
+  background-color: #383838;
+  border-radius: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -248,7 +256,7 @@
   cursor: pointer;
 }
 .cart .buttons a {
-  color: #fff;
+  color: #fafafa;
   text-decoration: none;
 }
 .checkoutLayout{
@@ -306,8 +314,9 @@
   margin-top: 20px;
   font-weight: bold;
   color: #fff;
-
-
+}
+.buttonCheckout:hover{
+  cursor: pointer;
 }
 .returnCart h1{
   border-top: 1px solid #eee;  
